# robotics-ai-digest

./: .gitignore  README.md  pyproject.toml
robotics-ai-digest-main/: .pre-commit-config.yaml  README.md
robotics-ai-digest-main/.github/workflows/: ci.yml
robotics-ai-digest-main/scripts/: run_digest.ps1
robotics-ai-digest-main/src/robotics_ai_digest/: cli.py
robotics-ai-digest-main/src/robotics_ai_digest/digest/: renderer_md.py
robotics-ai-digest-main/src/robotics_ai_digest/feeds/: rss_reader.py
robotics-ai-digest-main/src/robotics_ai_digest/storage/: db.py  models.py  repository.py
robotics-ai-digest-main/src/robotics_ai_digest/summarization/: __init__.py  cost_estimator.py  mock_summarizer.py  openai_summarizer.py  summarizer.py
robotics-ai-digest-main/tests/: test_cli_summarize.py  test_cost_estimator.py  test_digest_cli.py  test_rss_reader.py
robotics-ai-digest-main/tests/fixtures/: sample_rss.xml
scripts/: run_digest.ps1
src/robotics_ai_digest/: cli.py
src/robotics_ai_digest/digest/: __init__.py  renderer_md.py
src/robotics_ai_digest/feeds/: __init__.py  rss_reader.py
src/robotics_ai_digest/storage/: __init__.py  db.py  models.py  repository.py
src/robotics_ai_digest/summarization/: mock_summarizer.py  openai_summarizer.py
tests/: test_cli.py  test_cli_digest.py  test_cli_run.py  test_cli_summaries.py  test_cli_summarize.py  test_digest_renderer.py  test_renderer_md.py  test_storage_repository.py
