[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotics-ai-digest"
version = "0.1.0"
description = "Portfolio-oriented Python project for robotics and AI digest workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "pre-commit>=3.7.0"
]

[project.scripts]
robotics-ai-digest = "robotics_ai_digest.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
